--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant|Montserrat');
+@media only screen and (max-device-width: 480px) {
+    body {
+    font-size: 200%;
+    }
+    }
 body {
   background-color: rgb(255,254,249);
   margin-left: auto;
