css update for mobile

--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant|Montserrat');
 @media only screen and (max-device-width: 480px) {
     body {
-    font-size: 200%;
+    font-size: 500%;
     }
+    h1 {
+    font-size: 500%;
+    }
+    h2 {
+    font-size: 500%;
+    }
+    .header {
+    font-size: 500%;
+    }
+    a.link {
+    font-size: 500%;
+    }
+
     }
 body {
   background-color: rgb(255,254,249);
