--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant|Montserrat');
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 600px) {
   body {
     column-width: 400px 1;
     font-size: 500%;
