Fixing typos and number detection

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ ul {
   margin-top: 0.5em;
 }
 
-@media screen and (max-width: 600px) {
+@media all and (max-width: 600px) {
   body {
   width: 80%;
   }
